...
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btnChat"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_send"
...
    <Spinner
        android:id="@+id/viewMapSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btnFilter"
        app:layout_constraintTop_toTopOf="@id/btnFilter"
        app:layout_constraintEnd_toStartOf="@+id/btnFilter"
        />

    <ImageButton
        android:id="@+id/btnFilter"
...
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnChat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnAllMoods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#9FE2DD"
            android:text="All Moods"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginEnd="8dp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnFollowingMoods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#9FE2DD"
            android:text="Following Moods"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="8dp"
            android:textColor="#FFFFFF" />

    </LinearLayout>

...
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="searchView,btnFilter"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMoodEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutBottomNav"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBarrier"
        tools:listitem="@layout/item_mood_event"/>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#9FE2DD"
        android:contentDescription="Add new mood"
...
